--- a/gb/12/6/26/n3621532.md
+++ b/gb/12/6/26/n3621532.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/djuxfe341/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/djuxfe341/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/djuxfe341/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/djuxfe341/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/djuxfe341/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/djuxfe341/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/djuxfe341/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/djuxfe341/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/djuxfe341/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/djuxfe341/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/djuxfe341/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/djuxfe341/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/djuxfe341/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/djuxfe341/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/djuxfe341/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>北京舞院高才生冲出国门创国际辉煌 荐中国舞大赛</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2012/06/1206260835302519-600x400.jpg" />
 <h6>李存信夫妇及三个孩子 Tom、大女儿Sophie（左前）、小女儿Bridie。（图片提供：李存信/摄影：Robert Bontschek）
 </h6>
 <hr>
-	<p>【大纪元2012年06月26日讯】（大纪元记者骆亚综合报导）<ahref="https://github.com/djuxfe341/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA.md#1">新唐人</a>电视台“第五届全世界中国舞舞蹈大赛”10月将在纽约举办。而亚太赛区初赛将于8月18日在香港举行，为大陆艺术家和中国舞舞蹈演员提供在世界舞台上展现才华、再创辉煌的机会。但近日中共政法委下密令阻扰大陆舞蹈演员赴香港参赛，引起外界关注，很多人对政法委做法表示谴责的同时，也呼吁有这方面才华的艺术界人士把握难得机会，不要听政法委荒唐的指令，做自己真正想做的事情。</p>
+	<p>【大纪元2012年06月26日讯】（大纪元记者骆亚综合报导）<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA.md#1">新唐人</a>电视台“第五届全世界中国舞舞蹈大赛”10月将在纽约举办。而亚太赛区初赛将于8月18日在香港举行，为大陆艺术家和中国舞舞蹈演员提供在世界舞台上展现才华、再创辉煌的机会。但近日中共政法委下密令阻扰大陆舞蹈演员赴香港参赛，引起外界关注，很多人对政法委做法表示谴责的同时，也呼吁有这方面才华的艺术界人士把握难得机会，不要听政法委荒唐的指令，做自己真正想做的事情。</p>
 <p>当年轰动世界的、充满传奇色彩的芭蕾王子李存信抓住了重要机遇，在国外留学期间为追求艺术的自由空间，选择留在美国，被中领馆扣押21小时也不屈服，最终获得真正的自由，令其舞蹈事业很快达到顶峰，在西方芭蕾舞天才云集的艺术殿堂创造奇迹。</p>
 <p>评论认为，对于想追求更高艺术境界的中国大陆的舞蹈演员，面对中共的阻挠，难以抉择时，世界十大优秀芭蕾舞演员之一的李存信，他的故事有很多启示。</p>
-<p><B> 李存信力荐<ahref="https://github.com/djuxfe341/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA.md#1">新唐人</a><ahref="https://github.com/djuxfe341/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E8%88%9E%E5%A4%A7%E8%B5%9B.md#1">中国舞大赛</a></B></p>
+<p><B> 李存信力荐<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%96%B0%E5%94%90%E4%BA%BA.md#1">新唐人</a><ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E8%88%9E%E5%A4%A7%E8%B5%9B.md#1">中国舞大赛</a></B></p>
 <p>在世界享有盛名的芭蕾舞王子李存信曾在“新唐人第四届全世界中国舞舞蹈大赛”之际，就力荐并鼓励中国大陆的中国舞演员把握机会参赛，他认为艺术家只有在没有任何约束的环境下才能得以真正的发展。</p>
 <p>他接受新唐人采访时说：“不应该怕，我觉得一个人的一生是短短的，特别是搞艺术的生涯更短，尤其是跳舞专业，跳不了很长时间。 必须把心全放开，思想不要有任何的负担，艺术不应该带有政治色彩，最重要的一点，搞艺术的要心情非常坦白，思想非常开放，不要有任何的拘束性。”</p>
 <p>他曾接受《大纪元》专访时表示：“在中国，我打下一个非常好的训练基础，虽技术上高超，但在艺术上却非常有局限性。到美国来才找到真正艺术的感受，想像力与创作力飞速地升华着、突破着，艺术造诣开始质的飞跃。”</p>
 <p>“作为一个艺术家，如果心里没有这种自由，就觉得不管怎么跳，不管怎么刻画一个角色，绝对不会成为一个好演员，一个好的艺术家。只有到美国来之后，我才感受到自由的重要性。”<br />
-	<figure id="attachment_6604296" style="width: 403px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/06/1206260835352519.jpg" alt="2009年年度澳洲父亲（2009 Shepherd Centre Australian Father of the Year）首位华人获奖者李存信先生接受了大纪元记者的专访（摄影：Win/大纪元）" title="2009年年度澳洲父亲（2009 Shepherd Centre Australian Father of the Year）首位华人获奖者李存信先生接受了大纪元记者的专访（摄影：Win/大纪元）" width="403" b="600"
-	class="size-large wp-image-6604296" /></a><figcaption class="wp-caption-text">2009年年度澳洲父亲（2009 Shepherd Centre Australian Father of the Year）首位华人获奖者李存信先生接受了大纪元记者的专访（摄影：Win/大纪元）</figcaption></figure></p>
+	<figure id="attachment_6604296" aria-describedby="caption-attachment-6604296" style="width: 403px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/06/1206260835352519.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/06/1206260835352519.jpg" alt="2009年年度澳洲父亲（2009 Shepherd Centre Australian Father of the Year）首位华人获奖者李存信先生接受了大纪元记者的专访（摄影：Win/大纪元）" title="2009年年度澳洲父亲（2009 Shepherd Centre Australian Father of the Year）首位华人获奖者李存信先生接受了大纪元记者的专访（摄影：Win/大纪元）" width="403" b="600"
+	class="size-large wp-image-6604296" /></a><figcaption id="caption-attachment-6604296" class="wp-caption-text">2009年年度澳洲父亲（2009 Shepherd Centre Australian Father of the Year）首位华人获奖者李存信先生接受了大纪元记者的专访（摄影：Win/大纪元）</figcaption></figure></p>
 <p><B>选择在美国发展的李存信 赢得世界芭蕾舞蹈大赛的铜奖和银奖</B></p>
 <p>李存信11岁时被选入北京舞蹈学院，81年到美国休斯顿芭蕾舞团访问交流，一年访问结束的前三天，他决定留在美国，遭中领馆扣留21小时，成为轰动一时的国际事件。当时因美国副总统布什的介入，李存信获得自由，从此走上国际舞台。</p>
 <p>回首被中领馆扣押这段人生中最刻骨铭心的经历时，他谈到自己在高压下，抱着宁可站着死、不愿跪着生的信念走过来，“不管困难多大，不管谁给你压力，你都不应该失去自己的信心和勇气。”</p>
@@ -25,8 +25,8 @@
 <p>选择在美国发展的李存信，很快就在自由的艺术氛围中获得最大的成功，赢得世界芭蕾舞蹈大赛的一枚铜奖和两枚银奖，并成为《纽约时报》评选的世界十大优秀芭蕾舞演员之一，后来移居澳洲，担任澳大利亚芭蕾舞团的首席演员。</p>
 <p><B>自传体成一部优秀的电影</B></p>
 <p>李存信的自传被拍成电影《毛的最后舞者》，在西方世界引起轰动。电影讲述他如何从一个穷苦的乡村孩子成为世界芭蕾明星，充满辛酸、悲苦、挣扎直到成功的经历，09年9月在加拿大多伦多电影节首次亮相就大获成功被授予银奖。随后澳大利亚上演再获成功，被评为澳洲电影史上十大最佳影片之一。<br />
-	<figure id="attachment_6604301" style="width: 398px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/06/1206260835262519.jpg" alt="《毛的最后舞者》剧照" title="《毛的最后舞者》剧照" width="398" b="600"
-	class="size-large wp-image-6604301" /></a><figcaption class="wp-caption-text">《毛的最后舞者》剧照</figcaption></figure><br /><B>“走出心灵牢笼 超越过去恐惧”</B></p>
+	<figure id="attachment_6604301" aria-describedby="caption-attachment-6604301" style="width: 398px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/06/1206260835262519.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/06/1206260835262519.jpg" alt="《毛的最后舞者》剧照" title="《毛的最后舞者》剧照" width="398" b="600"
+	class="size-large wp-image-6604301" /></a><figcaption id="caption-attachment-6604301" class="wp-caption-text">《毛的最后舞者》剧照</figcaption></figure><br /><B>“走出心灵牢笼 超越过去恐惧”</B></p>
 <p>李存信希望自己的经历对别人有鼓舞和启发的作用：“不要放弃，超越自我，用信心和勇气面对困难，去实现自己的梦想。”</p>
 <p>“不管困难多大，不管谁给你施加压力，就包括一个政权对你的压力，你都不应该失去自己的信心和勇气，都不应该放弃自己的梦想，这样你才能走自己的路，在反思和创新中走向成功。”</p>
 <p>他认为作为搞艺术的，能够有这种100%自由的感觉、心理，或者有这种自由的权利，走出以前的禁锢和牢笼，就肯定会成为很好的艺术家。</p>
@@ -41,7 +41,7 @@
 <p>曹驰表示，神韵晚会特别打动人心，极具艺术和精神的感染力，能引发观众的广泛共鸣，这就是艺术的最高境界。他说：“技巧是必要的基础，但是艺术内在的魅力才是最重要的，观众的喜欢和内心共鸣就是最好的说明。”</p>
 <p>他还表示，神韵给舞蹈界很多启示。观看神韵就像一次跨时空旅行，反思自己的艺术和人生。“神韵演员真的很感染观众。只有在现场你才更能感受到神韵晚会展现的那种艺术的强大的震撼力、感染力，那种内在的魅力，还有演出所散发出的能量。”</p>
 <p>他认为尤其难得的是神韵晚会每年都是全新的一套节目，创造力非常强，效率很高。在全世界舞台上弘扬中华传统文化，这是一件大好事，是一个大成就。</p>
-<p><B>新唐人第五届全世界<ahref="https://github.com/djuxfe341/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E8%88%9E%E5%A4%A7%E8%B5%9B.md#1">中国舞大赛</a></B></p>
+<p><B>新唐人第五届全世界<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E8%88%9E%E5%A4%A7%E8%B5%9B.md#1">中国舞大赛</a></B></p>
 <p>新唐人电视台已经成功举办四届“全世界中国舞舞蹈大赛”，吸引了十几个国家和地区的数百位选手参赛，每年发放奖金六万美元。多位获奖者已经加盟世界知名的神韵艺术团每年在世界各地巡回演出。</p>
 <p>第五届新唐人电视台“全世界中国舞舞蹈大赛”将于今年10月25日至27日在纽约翠柏卡表演艺术中心举行，报名已于今年1月开始。亚太赛区初赛也已定在8月18日在香港举行，现正接受报名。</p>
 <p>大赛的宗旨是为了弘扬纯真、纯善、纯美的正统舞蹈艺术，把这种中国古老文化推向全世界，为中国舞演员施展才华搭设平台。</p>
@@ -52,42 +52,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/djuxfe341/djy/blob/master/gb/12/6/13/n3611242.md#1">广电局下密令封杀 中共迫娱乐公司打压新唐人</a></li>
-<li><a href="https://github.com/djuxfe341/djy/blob/master/gb/12/6/14/n3612625.md#1">蒋介石御厨同门徒弟 祝贺中国菜大赛成功</a></li>
-<li><a href="https://github.com/djuxfe341/djy/blob/master/gb/12/6/15/n3613025.md#1">广电总局封杀新唐人密件曝光 抄送610办公室</a></li>
-<li><a href="https://github.com/djuxfe341/djy/blob/master/gb/12/6/16/n3614078.md#1">王北明：上海奉贤文广局证实610办公室对新唐人的封锁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/6/13/n3611242.md#1">广电局下密令封杀 中共迫娱乐公司打压新唐人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/6/14/n3612625.md#1">蒋介石御厨同门徒弟 祝贺中国菜大赛成功</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/6/15/n3613025.md#1">广电总局封杀新唐人密件曝光 抄送610办公室</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/6/16/n3614078.md#1">王北明：上海奉贤文广局证实610办公室对新唐人的封锁</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/djuxfe341/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/8/10/n12318970.md#1">【命理】为何王侯将相命中多见七杀凶星？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/9/n12391994.md#1">【有冇搞错】灾难变功绩 中共体制之恶大曝光</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389716.md#1">【时事纵横】美中记者签证拉锯战 中共谈对等？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/9/n12390995.md#1">【一线采访视频版】前军报记者：港警如魔鬼在人间</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387142.md#1">像科幻大片 美军大炮准确击落巡航导弹</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387030.md#1">川普为何考虑制裁中芯？一份报告震动华府</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387319.md#1">中印冲突升级 印军鸣枪警告 45年来首次</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/6/n12384714.md#1">陆网民看盗版《花木兰》撑警女主角遭六成差评</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12387235.md#1">林志玲丈夫AKIRA 顺利取得台湾居留证</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389885.md#1">32岁继女近照曝光 林青霞曾获赞世上最好继母</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12389717.md#1">阿娇厦门动第二次手术 头部表面一层缝66针</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12385497.md#1">阿娇下榻厦门酒店出意外 头部受伤送医治疗</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12385823.md#1">美军B-2轰炸机降落印度洋小岛 画面曝光</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/6/n12383561.md#1">【美食天堂】蒜头可以冷冻？4方法长久保存新鲜大蒜</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12388298.md#1">美军“末日飞机”不怕核爆 它有何特点？</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/8/n12388589.md#1">印度农民以半英亩土地种农作物养野鸟</a></li>
-<li><a href="https://github.com/ibfsyb3725/djy/blob/master/gb/20/9/7/n12386108.md#1">公寓失火俄女在3楼急扔2儿 邻居拿毯子接</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/djuxfe341/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/djuxfe341/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/6/26/n3621532.htm">北京舞院高才生冲出国门创国际辉煌 荐中国舞大赛</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/6/26/n3621532.htm">北京舞院高才生冲出国门创国际辉煌 荐中国舞大赛</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/djuxfe341/djy/blob/master/gb/12/6/26/n3621532.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/djuxfe341/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/djuxfe341/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/djuxfe341/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/djuxfe341/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/djuxfe341/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/12/6/26/n3621532.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
